--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>glittercutter</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<title>glittercutter - Home</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<link rel="stylesheet" href="mystyle.css">
 </head>
 
-<body bgcolor="#101410">
+<body>
+
+<hr />
+<h1 class="title">glittercutter on GitHub</h1>
+<hr />
+
+<p class=text>Well...</p>
+
+<p class=subtitle>Project</p>
+
+<p class=text><a href="glittercutter.github.com/crucially_square">Crucialy square</a>
+- A point and line game written in <b>C</b> using <b>SDL</b>.</p>
 
 </body>
 </html>
