--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p class=subtitle>Project</p>
 
-<p class=text><a href="glittercutter.github.com/crucially_square">Crucialy square</a>
+<p class=text><a href="/crucially_square">Crucialy square</a>
 - A point and line game written in <b>C</b> using <b>SDL</b>.</p>
 
 </body>
