--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<p class=text><a href="/">home</a></p>
 <hr />
 <h1 class="title">glittercutter on GitHub</h1>
 <hr />
@@ -17,7 +17,7 @@
 <p class=subtitle>Project</p>
 
 <p class=text><a href="/crucially_square">Crucialy square</a>
-- A point and line game written in <b>C</b> using <b>SDL</b>.</p>
+- A point and line game written in <b>C</b>, using <b>SDL</b>.</p>
 
 </body>
 </html>
