--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <p class=subtitle>Project</p>
 
-<p class=text><a href="/crucially_square">Crucialy square</a>
+<p class=text><a href="/crucially_square">Crucially square</a>
 - A point and line game using <b>SDL</b>, written in <b>C</b>.</p>
 
 </body>
