added bbPlugin & merged c_square's page from its repo

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <h1 class="title">glittercutter on GitHub</h1>
 <hr />
 
-<p class=text>Well...</p>
+<p class=subtitle>Repositories</p>
 
-<p class=subtitle>Project</p>
+<p class=text><a href="./c_square/index.html">cSquare</a>
+- A point and line game using the <b>SDL</b> library, coded in <b>C</b>.</p>
 
-<p class=text><a href="/crucially_square">Crucially square</a>
-- A point and line game using <b>SDL</b>, written in <b>C</b>.</p>
+<p class=text><a href="./bbplugin/index.html">bbPlugin</a>
+- Blackbox for Windows plugin.</p>
 
 </body>
 </html>
