removed source archive link

--- a/c_square/index.html
+++ b/c_square/index.html
@@ -9,7 +9,8 @@
 
 <body>
 
-<p class=text><a href="/">home</a></p>
+<p class=text><a href="/">home</a>
+</p>
 
 <hr />
 <h1 class="title">cSquare</h1>
@@ -17,7 +18,8 @@
 <p class=text>A simple point and line game.<br>
 Configuration (color, screen resolution, etc.) is done by editing the file 
 <tt>'game.conf'</tt> with a text editor.<br>
-New languages can be added using the files in <tt>'./lang'</tt> as guide.</p>
+New languages can be added using the files in <tt>'./lang'</tt> as guide.
+</p>
 
 <p class=subtitle>Download</p>
 
@@ -35,15 +37,10 @@ SDL, SDL_ttf, SDL_net and SDL_gfx. (Built on Arch Linux)
 </p>
 
 <p class=text><b>Source</b><br>
-<a href="http://github.com/glittercutter/c_square/download/c_square-src-0.6.tar.gz"
-target="_blank">c_square-source-0.6.tar.gz</a> -<br>
-Need libraries listed above to build the game.<br>
-The 'Makefile' should work on both Windows(mingw32) and Linux.
-</p>
-
 <p class=text>You can get the lastest development version on 
 <a href="http://github.com/glittercutter/c_square">GitHub</a>, or with:
-<tt>'git clone git://github.com/glittercutter/c_square.git'</tt>.</p>
+<tt>'git clone git://github.com/glittercutter/c_square.git'</tt>.
+</p>
 
 <p class=subtitle>Screenshots</p>
 
@@ -59,7 +56,8 @@ The 'Makefile' should work on both Windows(mingw32) and Linux.
 <img src="screenie-3_thumb.png" alt="screenie3" border="0">
 </a>
 
-<p class=text>Released under the GNU General Public License.</p>
+<p class=text>Released under the GNU General Public License.
+</p>
 
 </body>
 </html>
