--- a/bbplugin/index.html
+++ b/bbplugin/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>glittercutter - bbPlugin</title>
+	<title>glittercutter on github</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<link rel="stylesheet" href="/mystyle.css">
+	<link rel="stylesheet" href="mystyle.css">
 </head>
-
 <body>
 
-<?php include "../menu.php"; ?>
+<p class=text>
+<a href="/">home</a>
+ | 
+<a href="http://github.com/glittercutter">github</a>
+</p>
+<hr />
+
+
 
 <h1 class="title">bbPlugin</h1>
 
