--- a/c_square/index.html
+++ b/c_square/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
-<?php include "../header.php"; ?>
+<head>
+	<title>glittercutter on github</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+	<link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
 
-<?php include "../menu.php"; ?>
+<p class=text>
+<a href="/">home</a>
+ | 
+<a href="http://github.com/glittercutter">github</a>
+</p>
+<hr />
+
+
 
 <h1 class="title">cSquare</h1>
 
