--- a/bbplugin/index.html
+++ b/bbplugin/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>glittercutter on github</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<link rel="stylesheet" href="mystyle.css">
+	<link rel="stylesheet" href="../mystyle.css">
 </head>
 <body>
 
