updated download link

--- a/bbplugin/index.html
+++ b/bbplugin/index.html
@@ -24,7 +24,7 @@
 <br>
 
 <p class=text><b>Download</b></p>
-<p class=text><a href="http://github.com/glittercutter/bbplugin/bbDynamicTiling-0.1.zip">bbDynamicTiling-0.1.zip</a></p>
+<p class=text><a href="http://cloud.github.com/downloads/glittercutter/bbPlugin/bbDynamicTiling-0.1.zip">bbDynamicTiling-0.1.zip</a></p>
 <br>
 
 <p class=subtitle>Screenshots</p>
