updated download link

--- a/c_square/index.html
+++ b/c_square/index.html
@@ -28,14 +28,14 @@ New languages can be added using the files in <tt>'./lang'</tt> as guide.
 
 <p class=text>
 <b>Windows binary</b><br>
-<a href="http://github.com/glittercutter/c_square/c_square-win-0.6.zip"
+<a href="http://cloud.github.com/downloads/glittercutter/c_square/c_square-win-0.6.zip"
 target="_blank">c_square-win-0.6.zip</a> - 0.6MB<br>
 Libraries included.
 </p>
 
 <p class=text>
 <b>Linux binary</b><br>
-<a href="http://github.com/glittercutter/c_square/download/c_square-linux-0.6.tar.gz"
+<a href="http://cloud.github.com/downloads/glittercutter/c_square/download/c_square-linux-0.6.tar.gz"
 target="_blank">c_square-linux-0.6.tar.gz</a> - 59KB<br>
 You will need 32bit versions of the following libraries to run the game:<br>
 SDL, SDL_ttf, SDL_net and SDL_gfx. (Built on Arch Linux)
