added info for bbLeanBar-mod

--- a/bbplugin/index.html
+++ b/bbplugin/index.html
@@ -25,9 +25,8 @@
 
 <p class=text><b>Download</b></p>
 <p class=text><a href="http://cloud.github.com/downloads/glittercutter/bbPlugin/bbDynamicTiling-0.1.zip">bbDynamicTiling-0.1.zip</a></p>
-<br>
 
-<p class=subtitle>Screenshots</p>
+<p class=text><b>Screenshots</b></p>
 
 <a href="screenie-1.png" target="_blank">
 <img src="screenie-1_thumb.png" alt="screenie1" border="0"></a>
@@ -44,6 +43,22 @@
 
 <a href="screenie-4.png" target="_blank">
 <img src="screenie-4_thumb.png" alt="screenie4" border="0"></a>
+<br>
+<br>
+
+<p class=subtitle>bbLeanBar-mod</p>
+
+<p class=text>A modification to the original bar, feature a dynamic workspace changer,<br>
+showing current and occupied workspaces, inspired by the 'i3' window manager for X11.</p>
+<br>
+
+<p class=text><b>Download</b></p>
+<p class=text><a href="http://cloud.github.com/downloads/glittercutter/bbPlugin/bbLeanBar-mod-0.1.zip">bbLeanBar-mod-0.1.zip</a></p>
+
+<p class=text><b>Screenshots</b></p>
+
+<img src="bar-screenie-1.png" alt="screenie1" border="0"></a>
+<img src="bar-screenie-2.png" alt="screenie2" border="0"></a>
 
 
 </body>
