--- a/bbplugin/index.html
+++ b/bbplugin/index.html
@@ -49,7 +49,7 @@
 <p class=subtitle>bbLeanBar-mod</p>
 
 <p class=text>A modification to the original bar, feature a dynamic workspace changer,<br>
-showing current and occupied workspaces, inspired by the 'i3' window manager for X11.</p>
+showing current and populated workspaces, inspired by the 'i3' window manager for X11.</p>
 <br>
 
 <p class=text><b>Download</b></p>
@@ -57,9 +57,8 @@ showing current and occupied workspaces, inspired by the 'i3' window manager for
 
 <p class=text><b>Screenshots</b></p>
 
-<img src="bar-screenie-1.png" alt="screenie1" border="0"></a>
-<img src="bar-screenie-2.png" alt="screenie2" border="0"></a>
-
+<img src="bar-screenie-1.png" alt="screenie1" border="0" >
+<img src="bar-screenie-2.png" alt="screenie2" border="0">
 
 </body>
 </html>
