modified bbLeanbar-mod screenshots

--- a/c_square/index.html
+++ b/c_square/index.html
@@ -19,9 +19,10 @@
 <h1 class="title">cSquare</h1>
 
 <p class=text>A simple point and line game.<br>
-Configuration (color, screen resolution, etc.) is done by editing the file 
+ - Configuration (color, screen resolution, etc.) is done by editing the file 
 <tt>'game.conf'</tt> with a text editor.<br>
-New languages can be added using the files in <tt>'./lang'</tt> as guide.
+ - New languages can be added using the files in <tt>'./lang'</tt> as guide.<br>
+ - Multiplayer game on the local network (LAN).
 </p>
 
 <p class=subtitle>Download</p>
